crates/telemetry-lfs/tests/snapshots/snapshot_tests__lfs_edge_case_all_dashboard_lights.snap
---
source: crates/telemetry-lfs/tests/snapshot_tests.rs
expression: normalized
---
speed_ms: 5
steering_angle: 0
throttle: 0
brake: 1
clutch: 1
rpm: 8500
max_rpm: 0
gear: -1
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: true
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: true
  abs_active: true
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.02
engine_temp_c: 125
extended:
  dash_lights_raw:
    type: Integer
    value: 1049
  oil_pressure_bar:
    type: Float
    value: 6.8
  oil_temp_c:
    type: Float
    value: 150
  shift_light:
    type: Boolean
    value: true
  turbo_bar:
    type: Float
    value: 2.5
sequence: 0
