crates/telemetry-lfs/tests/snapshots/snapshot_tests__lfs_pit_stop_pit_lane.snap
---
source: crates/telemetry-lfs/tests/snapshot_tests.rs
expression: normalized
---
speed_ms: 16.7
steering_angle: 0
throttle: 0.25
brake: 0
clutch: 0.3
rpm: 3200
max_rpm: 0
gear: 1
num_gears: 0
lateral_g: 0
longitudinal_g: 0
vertical_g: 0
slip_ratio: 0
slip_angle_fl: 0
slip_angle_fr: 0
slip_angle_rl: 0
slip_angle_rr: 0
tire_temps_c:
  - 0
  - 0
  - 0
  - 0
tire_pressures_psi:
  - 0
  - 0
  - 0
  - 0
ffb_scalar: 0
ffb_torque_nm: 0
flags:
  yellow_flag: false
  red_flag: false
  blue_flag: false
  checkered_flag: false
  green_flag: true
  pit_limiter: true
  in_pits: false
  drs_available: false
  drs_active: false
  ers_available: false
  ers_active: false
  launch_control: false
  traction_control: false
  abs_active: false
  engine_limiter: false
  safety_car: false
  formation_lap: false
  session_paused: false
position: 0
lap: 0
current_lap_time_s: 0
best_lap_time_s: 0
last_lap_time_s: 0
delta_ahead_s: 0
delta_behind_s: 0
fuel_percent: 0.95
engine_temp_c: 85
extended:
  dash_lights_raw:
    type: Integer
    value: 8
  oil_pressure_bar:
    type: Float
    value: 3
  oil_temp_c:
    type: Float
    value: 90
  shift_light:
    type: Boolean
    value: false
  turbo_bar:
    type: Float
    value: 0
sequence: 0
